# pixel-lab

./: .gitignore  .gitmodules  67685861.proj.DotSettings  CMakeLists.txt  main.cpp
assets/models/backpack/: imgui.ini
assets/models/floor/: imgui.ini
assets/scene/: scene-test.yaml
assets/shaders/: DebugQuad.vert  Diffuse.frag  Diffuse.fs  Diffuse.vert  Diffuse2.frag  GeometryPass.fs  GeometryPass.vs  PointLight.frag  PointLight.gs  PointLight.vs  Screen.frag  Screen.vs  SelectionShader.fs  SelectionShader.vs  Shadow.vert  Simple.frag  Simple.vert  Skybox.vert
assets/tests/: cube.fbx  cube.glb  cube.gltf  sphere.glb  test1.gltf
src/: Editor.cpp  Editor.h  EditorApplicaiton.h  EditorApplication.h  EditorApplicationSlim.cpp  EditorApplicationSlim.h  EditorLayer.cpp  EditorLayer.h  pch.h
src-old/: Editor.cpp  Editor.h  EditorApplicaiton.h  EditorLayer.h
src-old/Assets/: Project.h  ProjectDatabase.cpp  ProjectList.h
src-old/Core/: EditorCamera.cpp
src-old/Renderer/: GeometryPass.h  LightingPass.h  SelectionPass.cpp
src-old/UI/: InspectorView.cpp  LoadingWindow.h  Menubar.cpp  Menubar.h  UI.h
src/Assets/: Project.cpp  Project.h  ProjectDatabase.h  ProjectList.h
src/Core/: EditorCamera.cpp  EditorCamera.h
src/File Management/: File.cpp  File.h
src/PixelLab/: EditorApplication.cpp  EditorApplication.h  EditorCamera.cpp  EditorCamera.h  EnvironmentSettingsPanel.cpp  EnvironmentSettingsPanel.h  ProfilerUI.cpp  ProfilerUI.h
src/Renderer/: DrawPass.cpp  DrawPass.h  GeometryPass.cpp  GeometryPass.h  LightingPass.cpp  SelectionPass.cpp  SelectionPass.h
src/UI/: AssetView.cpp  AssetView.h  HeirarchyView.cpp  HierarchyView.h  InspectorView.cpp  InspectorView.h  LoadingWindow.cpp  Menubar.cpp  Menubar.h  ProjectLibrary.cpp  ProjectLibrary.h  ProjectWindow.cpp  ProjectWindow.h  Toolbar.cpp  Toolbar.h  UI.h  Viewport.cpp  Viewport.h
src/UI/ContentBrowser/: ContentBrowser.cpp  ContentBrowser.h  ProjectHierarchyView.cpp
src/UI/ProjectView/: ProjectHierarchyView.h
